# systemy-wbudowane

./: CMakeLists.txt  README.md  cpu1.cpp  cpu1.h  cpu2.cpp  cpu2.h  definitions.h  main.cpp  room_channel.cpp  room_channel.h  room_read_if.h  room_write_if.h
sw_projekt/src/: Main.java  main.fxml
